Refactor: coach's list with pagination